<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity">

  <TextView
      android:id="@+id/textView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="64dp"
      android:layout_marginTop="148dp"
      android:layout_marginEnd="64dp"
      android:background="@drawable/round_border"
      android:text="@string/sudoku"
      android:textAlignment="center"
      android:textColor="@color/black"
      android:textSize="30sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/buttonStartNewGame"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="96dp"
      android:layout_marginTop="64dp"
      android:layout_marginEnd="96dp"
      android:background="@drawable/round_btn"
      android:onClick="onStartNewGameButtonClicked"
      android:text="@string/new_game"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

  <Button
      android:id="@+id/buttonAddNewBoard"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="96dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="96dp"
      android:background="@drawable/round_btn"
      android:onClick="onAddNewBoardButtonClicked"
      android:text="@string/add_new_board"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/buttonStartNewGame" />

  <Button
      android:id="@+id/buttonShowInstructions"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="96dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="96dp"
      android:background="@drawable/round_btn"
      android:onClick="onShowInstructionsButtonClicked"
      android:text="@string/show_instructions"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/buttonAddNewBoard" />

  <TextView
      android:id="@+id/textView12"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="52dp"
      android:text="@string/teamlab"
      android:textAlignment="center"
      android:textColor="@color/black"
      android:textSize="16sp"
      android:textStyle="italic"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/buttonShowInstructions"
      app:layout_constraintVertical_bias="0.989" />

</androidx.constraintlayout.widget.ConstraintLayout>

